# OpenBurn-old

./: .gitignore  CMakeLists.txt  OpenBurn.pro  README.md  grain.cpp  grain.h  graindialog.cpp  graindialog.h  graindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motorsim.cpp  motorsim.h  nozzle.h  openburn.ui  propellant.cpp  propellant.h  test.obm  util.h
src/: CMakeLists.txt  application.cpp  application.hpp  commands.cpp  commands.h  commands.hpp  export.cpp  export.h  export.hpp  grain.cpp  grain.h  grain.hpp  main.cpp  motor.cpp  motor.h  motor.hpp  motorsim.cpp  motorsim.h  motorsim.hpp  nozzle.cpp  nozzle.h  propellant.cpp  propellant.h  propellant.hpp  settings.cpp  settings.h  settings.hpp  units.cpp  units.h  units.hpp  util.cpp  util.h  util.hpp
src/ui/: designtab.cpp  designtab.h  designtab.hpp  graindesigntypes.cpp  graindesigntypes.h  graindialog.cpp  graindialog.h  graindialog.ui  graintablewidget.cpp  graintablewidget.h  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  nozzledialog.cpp  nozzledialog.h  propellanttab.cpp  propellanttab.h  propellanttab.hpp  simtab.cpp  simtab.h  simtab.hpp
src/ui/dialogs/: exportdialog.cpp  exportdialog.h  exportdialog.hpp  globalsettingsdialog.cpp  globalsettingsdialog.h  globalsettingsdialog.hpp  graindesigntypes.cpp  graindesigntypes.h  graindesigntypes.hpp  graindialog.cpp  graindialog.h  graindialog.hpp  nozzledesigntypes.cpp  nozzledesigntypes.h  nozzledesigntypes.hpp  nozzledialog.cpp  nozzledialog.h  nozzledialog.hpp  simsettingsdialog.cpp  simsettingsdialog.h  simsettingsdialog.hpp
src/ui/graphics/: graingraphicsitem.cpp  graingraphicsitem.h  graingraphicsitem.hpp  motorgraphicsitem.cpp  motorgraphicsitem.h  motorgraphicsitem.hpp  nozzlegraphicsitem.cpp  nozzlegraphicsitem.h  nozzlegraphicsitem.hpp
src/ui/widgets/: graintablewidget.cpp  graintablewidget.h  graintablewidget.hpp  unitscombobox.cpp  unitscombobox.h  unitscombobox.hpp
user/: propellants.json  settings.json
